<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".home">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#0EA772"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:text="Hello"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/user_icon3" />

        </LinearLayout>

<!--       -->
<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/homeFrameLayout"-->
<!--            />-->
<!--&lt;!&ndash;        <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="40dp"&ndash;&gt;-->
<!--&lt;!&ndash;            android:orientation="horizontal"&ndash;&gt;-->
<!--&lt;!&ndash;            >&ndash;&gt;-->
<!--&lt;!&ndash;           &ndash;&gt;-->

<!--&lt;!&ndash;        </LinearLayout>&ndash;&gt;-->
<!--&lt;!&ndash;        <LinearLayout&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;            android:orientation="vertical"&ndash;&gt;-->
<!--&lt;!&ndash;            >&ndash;&gt;-->
<!--&lt;!&ndash;            <FrameLayout&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_weight="1"&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/homeFrameLayout"&ndash;&gt;-->
<!--&lt;!&ndash;                />&ndash;&gt;-->

<!--&lt;!&ndash;        </LinearLayout>&ndash;&gt;-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="80dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:backgroundTint="#E7FAF4"
                    android:background="@drawable/rounded"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Test Now"
                        android:padding="10dp"
                        android:textSize="30dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingTop="20dp"
                        android:layout_weight="3"
                        android:textColor="#188307"
                        />

                    <com.google.android.material.button.MaterialButton

                        android:id="@+id/button"
                        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                        android:layout_width="300dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="15dp"
                        android:backgroundTint="#0EA772"
                        android:hint="Open Camera"
                        app:icon="@drawable/camera_icon"
                        app:iconSize="35dp"
                        android:textColorHint="@color/white"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        app:cornerRadius="20dp"

                        >

                    </com.google.android.material.button.MaterialButton>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="ABOUT APP"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded2"
                    android:gravity="center_vertical"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:textStyle="bold">

            </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/aboutus"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/plant1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OUR VISION"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded3"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_vision"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OUR TECHNOLOGY"
                    android:background="@drawable/rounded3"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_technology"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="JOIN US"
                    android:background="@drawable/rounded3"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_joinus"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
<!--                <androidx.viewpager.widget.ViewPager-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="5dp"-->
<!--                    android:background="@color/white"-->
<!--                    android:layout_marginTop="4dp"-->
<!--                    android:layout_marginBottom="4dp">-->

<!--                </androidx.viewpager.widget.ViewPager>-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="DISEASES INDENTIFICATION"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded2"
                    android:gravity="center_vertical"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diseases"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    >

                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/plant4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="COMPREHSIVE DISEASES LIBRARY"
                    android:background="@drawable/rounded3"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diseases_library"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PHOTO BASED DIAGNOSIS"
                    android:background="@drawable/rounded3"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diseases_photo"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
<!--                <androidx.viewpager.widget.ViewPager-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="5dp"-->
<!--                    android:background="@color/white"-->
<!--                    android:layout_marginTop="4dp"-->
<!--                    android:layout_marginBottom="4dp">-->

<!--                </androidx.viewpager.widget.ViewPager>-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="EXPERT GUIDANCE"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded2"
                    android:textSize="18dp"
                    android:gravity="center_vertical"
                    android:paddingStart="5dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="App experts assist farmers by providing insights, clarifying doubts, and offering personalized guidance on disease management, prevention strategies, and optimal plant care practices, enhancing user support and confidence."
                     android:textSize="18dp"
                    android:textColor="@color/black"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                </TextView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>

<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="200dp"-->
<!--android:orientation="vertical"-->
<!--android:backgroundTint="#E7FAF4"-->
<!--android:background="@drawable/rounded"-->
<!--android:layout_margin="20dp"-->
<!--    >-->

<!--<TextView-->
<!--    android:id="@+id/textView3"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="Test Now"-->
<!--    android:padding="10dp"-->
<!--    android:textSize="30dp"-->
<!--    android:textAlignment="center"-->
<!--    android:textStyle="bold"-->
<!--    android:paddingTop="20dp"-->
<!--    android:layout_weight="3"-->
<!--    android:textColor="#188307"-->
<!--    />-->

<!--<com.google.android.material.button.MaterialButton-->

<!--    android:id="@+id/button"-->
<!--    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"-->
<!--    android:layout_width="300dp"-->
<!--    android:layout_height="72dp"-->
<!--    android:layout_gravity="center_horizontal"-->
<!--    android:layout_margin="15dp"-->
<!--    android:backgroundTint="#0EA772"-->
<!--    android:hint="Open Camera"-->
<!--    app:icon="@drawable/camera_icon"-->
<!--    app:iconSize="35dp"-->
<!--    android:textColorHint="@color/white"-->
<!--    android:textAllCaps="false"-->
<!--    android:fontFamily="sans-serif"-->
<!--    android:textColor="@color/white"-->
<!--    android:textSize="25dp"-->
<!--    android:textStyle="bold"-->
<!--    app:cornerRadius="20dp"-->

<!--    >-->

<!--</com.google.android.material.button.MaterialButton>-->
<!--</LinearLayout>-->